Added a temporary CHECK to diagnose MESOS-8687.

From the stack trace in MESOS-8687, it appears the `httpSequence`
within `ProcessBase` was null during `ProcessBase::_consume`. In
order to diagnose how this can occur, this adds a CHECK that will
print the pid and endpoint name.